Login and Register feature implementing, Login not working at all!

--- a/FootScout.WebAPI/appsettings.json
+++ b/FootScout.WebAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLConnectionString": "Server=.; Database=FootScout; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:3000",
+    "ValidIssuer": "https://localhost:7220",
+    "Secret": "YOUR_UNIQIE_JWT_SECURED_KEY_MINIMUM_256_BIT"
+  }
 }
