Login and Registration features modyfied

--- a/FootScout.WebAPI/appsettings.json
+++ b/FootScout.WebAPI/appsettings.json
@@ -10,8 +10,9 @@
     "SQLConnectionString": "Server=.; Database=FootScout; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=true"
   },
   "JWT": {
+    "Secret": "YOUR_UNIQUE_JWT_SECURED_KEY_MINIMUM_256_BIT",
     "ValidAudience": "http://localhost:3000",
     "ValidIssuer": "https://localhost:7220",
-    "Secret": "YOUR_UNIQIE_JWT_SECURED_KEY_MINIMUM_256_BIT"
+    "ExpireDays": 1
   }
 }
