--- a/FootScout.WebClient/package.json
+++ b/FootScout.WebClient/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
