--- a/FootScout.WebClient/package.json
+++ b/FootScout.WebClient/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/js-cookie": "^3.0.6",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-scroll": "^1.8.10"
