--- a/FootScout.WebAPI/appsettings.json
+++ b/FootScout.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLConnectionString": "Server=.; Database=FootScout; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=true"
+    "MSSQLConnectionString": "Server=.; Database=FootScout; Integrated Security=true; TrustServerCertificate=True; MultipleActiveResultSets=true"
   },
   "JWT": {
     "Secret": "YOUR_UNIQUE_JWT_SECURED_KEY_MINIMUM_256_BIT",
